--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-GITHUB_TOKEN=<INSERT_TOKEN_HERE> # Bot's GitHub Personal Access Token
-GITHUB_REPO_OWNER=<REPO_OWNER>/<REPO_NAME> # https://github.com/<REPO_OWNER>/<REPO_NAME>/
-GITHUB_REPO_NAME=<REPO_OWNER>/<REPO_NAME> # https://github.com/<REPO_OWNER>/<REPO_NAME>/
+BOT_PERSONAL_ACCESS_TOKEN=<INSERT_TOKEN_HERE> # Bot's GitHub Personal Access Token
+REPO_OWNER=<REPO_OWNER>/<REPO_NAME> # https://github.com/<REPO_OWNER>/<REPO_NAME>/
+REPO_NAME=<REPO_OWNER>/<REPO_NAME> # https://github.com/<REPO_OWNER>/<REPO_NAME>/
