--- a/.github/workflows/conflicts-renovate.yml
+++ b/.github/workflows/conflicts-renovate.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Run update script
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPO: "username/repository"
+          BOT_PERSONAL_ACCESS_TOKEN: ${{ secrets.BOT_PERSONAL_ACCESS_TOKEN }}
+          REPO_OWNER: ${{ vars.REPO_OWNER }}
+          REPO_NAME: ${{ vars.REPO_NAME }}
         run: php composer_conflict_renovate.php
