--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "composer/semver": "3.4.3",
         "guzzlehttp/guzzle": "7.9.2",
         "knplabs/github-api": "3.16.0",
-        "nyholm/psr7": "1.8.2",
-        "symfony/http-client": "7.1.8"
+        "nyholm/psr7": "1.8.2"
     },
     "require-dev": {
         "gomzyakov/php-cs-fixer-config": "^1.77",
