--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 BOT_PERSONAL_ACCESS_TOKEN=<INSERT_TOKEN_HERE> # Bot's GitHub Personal Access Token
-REPO_OWNER=<REPO_OWNER>/<REPO_NAME> # https://github.com/<REPO_OWNER>/<REPO_NAME>/
-REPO_NAME=<REPO_OWNER>/<REPO_NAME> # https://github.com/<REPO_OWNER>/<REPO_NAME>/
+REPO_OWNER=<REPO_OWNER> # https://github.com/<REPO_OWNER>/<REPO_NAME>/
+REPO_NAME=<REPO_NAME> # https://github.com/<REPO_OWNER>/<REPO_NAME>/
 API_PAUSE_BETWEEN_ACTIONS_SECONDS=5 # Number of seconds that bot needs to wait between requests to prevent GitHub block
