--- a/.github/workflows/conflicts-upgrade.yml
+++ b/.github/workflows/conflicts-upgrade.yml
@@ -3,7 +3,7 @@ name: Composer Conflicts Section Upgrade
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 3 * * *' # Daily at 03:00 AM
+    - cron: '0 3 * * 1' # At 03:00 AM on Monday
 
 jobs:
   upgrade-conflicts:
